<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@color/amarillo"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/filaNombre"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nombre_playa"
            android:textSize="22sp"
            android:textColor="#333333"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/filaMunicipio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/municipio"
            android:textSize="18sp"
            android:textColor="#555555"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filaNombre" />

        <TextView
            android:id="@+id/filaSuelo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/suelo"
            android:textSize="18sp"
            android:textColor="#555555"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filaMunicipio" />

        <ImageView
            android:id="@+id/filafav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="TODO"
            android:src="@drawable/star"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>